# piifilter

./: .dockerignore  .gitignore  Dockerfile  OPUS_SCORE.md  README.md  ROADMAP.md  SECURITY.md  _analyze.py  _analyze_failures.py  _analyze_missed.py  _analyze_missed_deob.py  _analyze_phones.py  _analyze_results.py  _clean.sh  _count_gps.py  _dbg10.py  _dbg3.py  _dbg4.py  _dbg5.py  _dbg6.py  _dbg7.py  _dbg8.py  _dbg9.py  _debug2.py  _debug3.py  _debug4.py  _debug_addr.py  _debug_addr10.py  _debug_addr11.py  _debug_addr12.py  _debug_addr13.py  _debug_addr14.py  _debug_addr15.py  _debug_addr16.py  _debug_addr17.py  _debug_addr18.py  _debug_addr19.py  _debug_addr2.py  _debug_addr20.py  _debug_addr21.py  (+189 more)
.github/scripts/: check_recall_floor.py  verify_plugins.py
.github/workflows/: ci.yml
apps/chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
apps/chrome-extension/_locales/en/: messages.json
apps/cli/src/piifilter_cli/: __init__.py  main.py
apps/mcp-server/: pyproject.toml  server.py
apps/mcp-server/src/piifilter_mcp/: __init__.py  server.py
apps/openai-middleware/: pyproject.toml  server.py
apps/openai-middleware/src/piifilter_openai_proxy/: __init__.py  server.py
apps/rest-api/src/piifilter_api/: __init__.py  server.py  unfilter.py
apps/vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
apps/vscode-extension/src/: extension.ts
benchmarks/: .hermes-tmp.G1ION6  _debug_imports.py  _gen_dataset.py  _validate_dataset.py  adversarial-results.json  adversarial-v3-results.json  adversarial_dataset.py  adversarial_training_eval.py  benchmark_adversarial.py  benchmark_adversarial_v3.py  benchmark_holdout.py  check_recall_floor.py  f1-ratchet-state.json  final_scoring.py  generate_adversarial_v3.py  generate_adversarial_v4.py  generate_adversarial_v5.py  generate_adversarial_v6.py  generate_dataset.py  generate_real_world.py  heldout-results.json  ood-results-detail.json  ood-results.json  perf_benchmark.py  ratchet-state.json  ratchet_recall.py  real_world_report.txt  recall-results-arb.json  recall-results-heldout-arb.json  recall-results-heldout-raw.json  recall-results-heldout.json  recall-results-latest.json  recall-results-raw.json  recall-results.json  recall-test-output.json  recall.py  results.json  run.py  scoring-assertion.json  test_recall_result.py
benchmarks/data/: adversarial_v3.json  adversarial_v4.json  adversarial_v5.json  adversarial_v6.json  city_test_cases_report.txt  golden_corpus.json  ood_corpus_v1.json  ood_corpus_v2.json  pii_dataset.json  pii_dataset_v2.json
core/: bench_confidence.py  pyproject.toml  train_confidence_model.py
core/src/piifilter/: __init__.py  config.py  session.py  telemetry.py
core/src/piifilter/arbitration/: arbitrator.py  models.py
core/src/piifilter/errors/: __init__.py
core/src/piifilter/events/: __init__.py  audit.py  bus.py  noop.py
core/src/piifilter/interfaces/: __init__.py  detector.py  metrics.py  plugin.py  policy.py  provider.py  strategy.py
core/src/piifilter/pipeline/: __init__.py
core/src/piifilter/registry/: __init__.py  loader.py  registry.py
core/src/piifilter/shared/: __init__.py  alias_store.py  alias_store_persistent.py  deobfuscator.py  models.py  utils.py  validation.py
core/tests/: test_arbitrator_confidence.py  test_validation.py
docs/: KNOWN_LIMITATIONS.md  SECURITY_MODEL.md  chrome-store-listing.md  release.md
plugins/detector-gliner/src/piifilter_detector_gliner/: __init__.py  detector.py
plugins/detector-presidio/src/piifilter_detector_presidio/: __init__.py  detector.py
plugins/detector-regex/: pyproject.toml
plugins/detector-regex/src/piifilter_detector_regex/: __init__.py  detector.py  patterns.py
plugins/provider-anthropic/src/piifilter_provider_anthropic/: __init__.py  provider.py
plugins/provider-gemini/src/piifilter_provider_gemini/: __init__.py  provider.py
plugins/provider-lmstudio/: pyproject.toml
plugins/provider-lmstudio/src/piifilter_provider_lmstudio/: __init__.py  provider.py
plugins/provider-ollama/src/piifilter_provider_ollama/: __init__.py  provider.py
plugins/provider-openai/src/piifilter_provider_openai/: __init__.py  provider.py
plugins/provider-vllm/src/piifilter_provider_vllm/: __init__.py  provider.py
plugins/strategy-generalize/src/piifilter_strategy_generalize/: __init__.py  strategy.py
plugins/strategy-mask/src/piifilter_strategy_mask/: __init__.py  strategy.py
plugins/strategy-semantic/src/piifilter_strategy_semantic/: __init__.py  strategy.py
sdk/: pyproject.toml
sdk/js/: README.md  package-lock.json  package.json  tsconfig.json
sdk/js/src/: client.test.ts  client.ts  index.ts  types.ts
sdk/src/piifilter_sdk/: __init__.py  client.py
server/api/src/: main.py
server/cli/src/: main.py
tests/: benchmark_runner.py  f1_ci_gate.py  test_config.py  test_gateway.py  test_risk_engine.py
tests/core/: _diag_sse.py  test_alias_persistence.py  test_arbitrator.py  test_config.py  test_events.py  test_max_merge.py  test_max_merge_integration.py  test_pipeline.py  test_registry.py  test_session.py  test_streaming.py  test_telemetry.py  test_unfilter_roundtrip.py
tests/fuzz/: test_fuzz.py  test_regex_properties.py
tests/integration/: test_provider_real.py  test_streaming_integration.py  test_unfilter_roundtrip.py
tests/plugins/: test_regex_detector_ssn_mask.py
tools/: check_benchmark.py  check_fix.py  check_norm.py  check_ssn.py  check_ssn2.py  check_threshold.py  clean_tests.sh  count_ssn.py  debug_corpus.py  debug_detect.py  debug_fp_fix.py  debug_masked2.py  debug_masked3.py  debug_masked_ssn.py  debug_pat18.py  debug_patterns.py  debug_strip.py  deep_debug.py  find_masked_ssn_fp.py  get_score.py  get_score2.py  read_bench.py  read_bench2.py  read_bench3.py  read_bench4.py  read_bench_high.py  score.py  ssn_trace2.py  trace_ssn.py  verify_all.py  verify_fix.py
