[project]
name = "piifilter"
version = "2.0.0"
description = "Local-first AI privacy gateway — detect, classify, and semantically replace sensitive information before prompts reach LLMs. Think Nginx for AI."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
piifilter = "piifilter_cli.main:cli"

[tool.setuptools.packages.find]
where = ["core/src"]
include = ["piifilter*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["core/tests", "tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"