[project]
name = "piifilter"
version = "2.0.0"
description = "Local-first AI privacy gateway — detect, classify, and semantically replace sensitive information before prompts reach LLMs."
authors = [
    { name = "PIIFilter", email = "hello@piifilter.dev" },
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typing-extensions>=4.9",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]