[project]
name = "piifilter-sdk"
version = "2.0.0"
description = "PIIFilter SDK — the easiest way to use PIIFilter programmatically"
requires-python = ">=3.11"
dependencies = [
    "piifilter>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["piifilter_sdk*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"