[project]
name = "piifilter-sdk"
version = "2.0.0"
description = "PIIFilter SDK — the easiest way to use PIIFilter programmatically"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "PIIFilter", email = "hello@piifilter.dev" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "piifilter>=2.0.0",
]

[project.urls]
Homepage = "https://piifilter.dev"
Source = "https://github.com/ucefkh/piifilter"
Documentation = "https://github.com/ucefkh/piifilter#readme"
Issues = "https://github.com/ucefkh/piifilter/issues"
Changelog = "https://github.com/ucefkh/piifilter/releases"

[tool.setuptools.packages.find]
where = ["src"]
include = ["piifilter_sdk*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"