[project]
name = "piifilter-mcp-server"
version = "2.0.0"
description = "MCP server for PIIFilter — expose filter_prompt as a Claude Desktop tool"
requires-python = ">=3.11"
dependencies = [
    "piifilter>=2.0.0",
    "piifilter-sdk>=2.0.0",
    "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["piifilter_mcp*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"