[project]
name = "piifilter-mcp-server"
version = "0.1.0"
description = "MCP server for PIIFilter — expose filter_prompt as a Claude Desktop tool (Pre-release)"
requires-python = ">=3.11"
dependencies = [
    "piifilter>=0.1.0",
    "piifilter-sdk>=0.1.0",
    "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["piifilter_mcp*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"