[project]
name = "piifilter-openai-proxy"
version = "2.0.0"
description = "OpenAI-compatible middleware for PIIFilter — transparent prompt filtering proxy"
requires-python = ">=3.11"
dependencies = [
    "piifilter>=2.0.0",
    "piifilter-sdk>=2.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["piifilter_openai_proxy*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"